# nrf-hal

./: Cargo.toml
examples/pwm-demo/: Cargo.toml
examples/pwm-demo/src/: main.rs
nrf52-hal-common/src/: lib.rs  pwm.rs
