[package]
name = "pwm-demo"
version = "0.1.0"
authors = ["Mirabellensaft <tanks@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
panic-halt  = "0.2"
cortex-m-rt = "0.6.10"
cortex-m    = "=0.6.1"
heapless    = "0.5.1"
nb = "0.1.2"
cortex-m-semihosting = "0.3.5"


[dependencies.dwm1001]
version = "0.3.0"
features = ["dev", "rt"]

[dependencies.nrf52832-hal]
version = "=0.8.1"
path = "../../nrf52832-hal"
default-features = false
features = ["xxAA-package"]

[dependencies.nrf52-hal-common]
path = "../../nrf52-hal-common"
version = "=0.8.1"
